salto, camara y nivel procedural
camara con seguimiento del pj con tope arriba y abajo, salto prolongado o mínimo, y creación de nivel proceduralmente, plataformas con detección del personaje para activar la colision para que el pj pueda saltar desde abajo

--- a/Super Ynk Bros/Assembly-CSharp.csproj
+++ b/Super Ynk Bros/Assembly-CSharp.csproj
@@ -60,10 +60,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\BetterJump.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\KillTrigger.cs" />
+    <Compile Include="Assets\Scripts\LeaveZone.cs" />
     <Compile Include="Assets\Scripts\LevelBlock.cs" />
     <Compile Include="Assets\Scripts\LevelGenerator.cs" />
+    <Compile Include="Assets\Scripts\PlatformTrigger.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\SmoothCamera2D.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
